Add image sorting to header. Add name of page to haader.

--- a/qml.qrc
+++ b/qml.qrc
@@ -19,5 +19,7 @@
         <file>qml/ModuleTwisters/PoemsPage/qmldir</file>
         <file>qml/ModuleTwisters/VoicePage/qmldir</file>
         <file>qml/ModuleTwisters/VoicePage/VoiceImpl.qml</file>
+        <file>qml/ModuleTwisters/WrapperText/qmldir</file>
+        <file>qml/ModuleTwisters/WrapperText/WrapperTextImpl.qml</file>
     </qresource>
 </RCC>
